syntax = "proto3";

package smartcore.go.mem;

option go_package = "github.com/smart-core-os/sc-golang/pkg/memory";

import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

// MemoryPowerSupplyApi allows a client to adjust the internal state of an in-memory power supply server.
// Use for configuring testing.
service MemoryPowerSupplySettingsApi {
  rpc GetSettings(GetMemoryPowerSupplySettingsReq) returns (MemoryPowerSupplySettings);
  rpc UpdateSettings(UpdateMemoryPowerSupplySettingsReq) returns (MemoryPowerSupplySettings);
  rpc PullSettings(PullMemoryPowerSupplySettingsReq) returns (stream PullMemoryPowerSupplySettingsRes);
}

// MemoryPowerSupplySettings describes properties of the in-memory PowerSupplyApi server that can be changed
// at run time.
message MemoryPowerSupplySettings {
  float rating = 1;
  float voltage = 2;
  float load = 3;
  float reserved = 4;
  google.protobuf.Duration max_ramp_duration = 5;
  google.protobuf.Duration default_ramp_duration = 6;
}

message UpdateMemoryPowerSupplySettingsReq {
  string name = 1;
  MemoryPowerSupplySettings settings = 2;
  google.protobuf.FieldMask update_mask = 3;
}

message GetMemoryPowerSupplySettingsReq {
  string name = 1;
  google.protobuf.FieldMask fields = 2;
}

message PullMemoryPowerSupplySettingsReq {
  string name = 1;
  google.protobuf.FieldMask fields = 2;
}

// Response message enclosing device state changes
message PullMemoryPowerSupplySettingsRes {
  repeated Change changes = 1;

  message Change {
    // name for the device that issued the change
    string name = 1;
    // when the change occurred
    google.protobuf.Timestamp change_time = 2;
    MemoryPowerSupplySettings settings = 3;
  }
}
